--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <input class="js-input">
         <button type="button" class="js-check"> check</button><br />
         <p class="js-warning"> * Enter 4 different numbers</p>
-
+        <div class="icons"> <img class="bull" src="./images/bull.svg"><img class="bull" src="./images/cow.png"></div>
         <div class="js-result"> </div>
     </main>
 
